// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`rollup > basic.js 1`] = `
"// basic.js
var basic = \`import 'unplugin-utils'
import 'js-tokens'
import 'pkg-types'
import 'unplugin'
import 'picocolors'
\`;

export { basic as default };
"
`;

exports[`rollup > early-error.js 1`] = `[Error: Early error]`;

exports[`rollup > error.js 1`] = `
[Error: Unused 2 dependencies found: 

- js-tokens
- picocolors

You can remove them from #CWD#/package.json]
`;

exports[`rollup > error-comment.js 1`] = `
[Error: Unused 4 dependencies found: 

- js-tokens
- picocolors
- pkg-types
- unplugin-utils

You can remove them from #CWD#/package.json]
`;

exports[`rollup > error-tsx.tsx 1`] = `
[Error: Unused 2 dependencies found: 

- picocolors
- unplugin

You can remove them from #CWD#/package.json]
`;

exports[`rollup > error-vue.vue 1`] = `
[Error: Unused 4 dependencies found: 

- js-tokens
- picocolors
- pkg-types
- unplugin-utils

You can remove them from #CWD#/package.json]
`;
